--- a/medicasoft/src/com/rsoft/medicasoft/shared/i18n/II18NMessages.properties
+++ b/medicasoft/src/com/rsoft/medicasoft/shared/i18n/II18NMessages.properties
@@ -2,6 +2,8 @@
 #
 #Modified on 12/1/13 5:08 PM
 #Sun Dec 01 17:08:18 EST 2013
+no_information_to_display=No information to display
+information=Information
 taille=Taille
 htmlEditor_sourceEditTipTitle=Source Edit
 nomResponsable2=Nom Responsable2
