--- a/medicasoft/src/com/rsoft/medicasoft/shared/i18n/II18NMessages_cr.properties
+++ b/medicasoft/src/com/rsoft/medicasoft/shared/i18n/II18NMessages_cr.properties
@@ -2,6 +2,8 @@
 #
 #Modified on 02/11/12 13:40
 #Fri Nov 02 13:40:41 PDT 201
+no_information_to_display=No information to display
+information=Information
 droitAccess=Access Right
 userGroupId=User Group Id
 errorColumn=error column
